Added posts/reposts/quotes creation
