# app/controllers/api/v1/entries/quotes_controller.rb
@@ -1,0 +1,13 @@
+module Api
+  module V1
+    module Entries
+      class QuotesController < BaseController
+        ENTRYABLE = Quote
+
+        def permitted_params
+          params.require(:quote).permit(:post_id, :content)
+        end
+      end
+    end
+  end
+end
